syntax = "proto3";

import "Detection.proto";
import "Empty.proto";

package proto;

service HTTP {
  rpc onDetection(Detection) returns (Empty) {}
}
